--- a/fxs-platform-web/src/main/resources/templates/litigant_consulting_free_detail.html
+++ b/fxs-platform-web/src/main/resources/templates/litigant_consulting_free_detail.html
@@ -117,8 +117,10 @@
 			$("#resolveDispute").on("click", function() {
 				$.ajax({
 					type : 'PUT',
-					url : '/user/case/update/' + [[${caseDetailInfo.id}]] + "/5",
-					data : JSON.stringify({}),
+					url : '/user/case/update/' + [[${caseDetailInfo.id}]],
+					data : JSON.stringify({
+						"status": "5"
+					}),
 					contentType : "application/json; charset=utf-8",
 					success : function(data) {
 						$("#modalContent").empty().append("更新成功")
