--- a/fxs-platform-web/src/main/resources/templates/lawyer_lawsuit_detail.html
+++ b/fxs-platform-web/src/main/resources/templates/lawyer_lawsuit_detail.html
@@ -139,6 +139,10 @@
 			      <div class="modal-body">
 			        <form>
 			          <div class="form-group">
+			            <label for="recipient-name" class="form-control-label">律师费用:</label>
+			            <input type="text" class="form-control" id="counselFee" />
+			          </div>
+			          <div class="form-group">
 			            <label for="recipient-name" class="form-control-label">律师意见:</label>
 			            <input type="text" class="form-control" id="lawyerComments" />
 			          </div>
