--- a/fxs-platform-web/src/main/resources/templates/litigant_consulting_free_detail.html
+++ b/fxs-platform-web/src/main/resources/templates/litigant_consulting_free_detail.html
@@ -25,9 +25,16 @@
 								<li class="orange">您的案件类型</li>
 								<li th:text="${caseDetailInfo.falltypusType}"></li>
 								<li class="line"></li>
-								<li class="orange">律师意见</li>
-								<li th:if="${ not #strings.isEmpty(caseDetailInfo.lawyerComments)}" th:text="${caseDetailInfo.lawyerComments}"></li>
-								<li th:if="${#strings.isEmpty(caseDetailInfo.lawyerComments)}">尚未有律师回复</li>
+								<li class="orange">律师意见
+									<ul class="writeInfoText ulCell myCell" th:if="${ not #lists.isEmpty(caseDetailInfo.caseFeedbackInfo)}" th:each="lawyerComments : ${caseDetailInfo.caseFeedbackInfo}">
+										<li class="orange">内容</li>
+										<li th:text="${lawyerComments.lawyerComments}"></li>
+										<li class="line"></li>
+										<li class="orange">律师</li>
+										<li th:text="${lawyerComments.lawyerName}"></li>
+									</ul>
+									<li th:if="${#lists.isEmpty(caseDetailInfo.caseFeedbackInfo)}">尚未有律师回复</li>
+								</li>
 								<li class="line"></li>
 								<li class="orange">您的问卷调查信息</li>
 								<ul th:each="qa : ${caseDetailInfo.qaMapping}">
@@ -49,9 +56,9 @@
 								<li class="gray">2017.11.06 10:57</li>
 								<div class="row mybox">
 									<div class="col-md-12 btnSearch solutionTwoBtn">
-										<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#addDetailedInquiry">追问</button>
+										<button th:attr="disabled=${#lists.size(caseDetailInfo.detailedInquiries) eq 3} ? 'disabled' : 'false'" type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#addDetailedInquiry">追问</button>
 										&nbsp;&nbsp;
-										<button type="button" id="resolveDispute" class="btn btn-primary btn-lg">解决纠纷</button>
+										<button th:attr="disabled=${caseDetailInfo.status eq '5'} ? 'disabled' : 'false'" type="button" id="resolveDispute" class="btn btn-primary btn-lg">解决纠纷</button>
 									</div>
 								</div>
 							</ul>
