--- a/fxs-platform-web/src/main/resources/templates/lawyer_lawsuit_detail.html
+++ b/fxs-platform-web/src/main/resources/templates/lawyer_lawsuit_detail.html
@@ -119,7 +119,7 @@
 							<ul>
 								<div class="row">
 									<div class="col-md-12 col-sm-12 btnNext btnSearch caseTwoBtn">
-										<button type="button" class="btn btn-primary btn-lg btn-block" data-toggle="modal" data-target="#addFeedbackModal">律师反馈</button>
+										<button th:attr="disabled=${caseDetailInfo.status eq '4'} ? 'disabled' : 'false'" type="button" class="btn btn-primary btn-lg btn-block" data-toggle="modal" data-target="#addFeedbackModal">律师反馈</button>
 									</div>
 								</div>
 							</ul>
