--- a/fxs-platform-web/src/main/resources/templates/public_list_dispute_info.html
+++ b/fxs-platform-web/src/main/resources/templates/public_list_dispute_info.html
@@ -12,12 +12,14 @@
 					<th>纷争编号</th>
 					<th>纷争名称</th>
 					<th>是否一级问题</th>
+					<th>类型</th>
 					<th>操作</th>
 				</tr>
 				<tr th:each="question : ${questionList}">
 					<td th:text="${question.id}"></td>
 					<td th:text="${question.description}"></td>
 					<td th:text="${question.isRootQuestion}"></td>
+					<td th:text="${question.questionType}"></td>
 					<td>
 						<a th:href="@{/disputeInfo/viewDisputeInfo/{id}(id=${question.id})}">查看</a>
 				 	</td>
