--- a/fxs-platform-web/src/main/resources/templates/litigant_consulting_phone.html
+++ b/fxs-platform-web/src/main/resources/templates/litigant_consulting_phone.html
@@ -17,13 +17,16 @@
 			<section class="col-md-12 col-sm-12 writeInfo space20">
 				<div class="row">
 					<div class="col-md-8 col-sm-8">
-						<ul class="writeInfoText ulCell" th:if="${#lists.isEmpty(myPhoneConsultings)}">
+						<ul class="writeInfoText ulCell" th:if="${#lists.isEmpty(pageableData)}">
 							<li class="orange">您暂时没有电话咨询</li>
 						</ul>
-						<ul th:if="${not #lists.isEmpty(myPhoneConsultings)}" class="writeInfoText ulCell myCell" th:each="phoneConsulting : ${myPhoneConsultings}">
+						<ul th:if="${not #lists.isEmpty(pageableData)}" class="writeInfoText ulCell myCell" th:each="phoneConsulting : ${pageableData}">
 							<li>电话号码: <span th:text="${phoneConsulting.contactPhone}"></span></li>
 							<li>提交时间： <span class="gray" th:text="${phoneConsulting.researvationDatetime}"></span></li>
 						</ul>
+						<div th:if="${not #lists.isEmpty(pageableData)}">
+							<div th:include="fragments/page :: pager" th:remove="tag"></div>
+						</div>
 						<div class="row">
 							<div class="col-md-12 col-sm-12 btnNext">
 								<button type="button" class="btn btn-primary btn-lg btn-block" data-toggle="modal" data-target="#buyConsulting">立即提交</button>
