--- a/fxs-platform-web/src/main/resources/templates/fragments/header.html
+++ b/fxs-platform-web/src/main/resources/templates/fragments/header.html
@@ -34,47 +34,65 @@
 		</nav>
 		 -->
 		<div class="img-responsive">
-			<div class="container">
-				<ul class="nav loginBox">
-					<li><a href="#" sec:authentication="name" /><span>|</span></li>
-					<li><a href="#" target="_self">您的消息</a><span>|</span></li>
-					<li><a href="#" target="_self">关于我们</a><span>|</span></li>
-					<li><a href="#" target="_self">律师入口</a></li>
-					<li><a href="/signOut" sec:authorize="isAuthenticated()">登出</a></li>
-				</ul>
-				<ul class="clearboth"></ul>
-			</div>
-			<div class="line"></div>
-			<div class="container">
-				<div class="row">
-					<div class="col-md-3">
-						<img th:src="@{/img/logo.png}" />
-					</div>
-					<div class="col-md-1 mapId">上海</div>
-					<nav class="col-md-8 navbar-default" role="navigation">
-						<ul class="nav mainNav">
-							<li class="active"><a href="#">首页</a></li>
-							<li class="dropdown"><a href="#" class="dropdown-toggle"
-								data-toggle="dropdown"> 法律咨询</a>
-								<ul class="dropdown-menu">
-									<li><a href="#">免费法律咨询</a></li>
-									<li class="divider"></li>
-									<li><a href="#">电话咨询</a></li>
-								</ul></li>
-							<li class="dropdown"><a href="#" class="dropdown-toggle"
-								data-toggle="dropdown"> 打官司 </a>
-								<ul class="dropdown-menu">
-									<li><a href="#">找律师打官司</a></li>
-									<li class="divider"></li>
-									<li><a href="#">自助打官司</a></li>
-								</ul></li>
-							<li><a href="#">其他法律业务</a></li>
-							<li class="lastItem"><a href="#">投诉</a></li>
-						</ul>
-					</nav>
-				</div>
-			</div>
-		</div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div>
+                            <p class="logoLine"><img th:src="@{/img/logo.png}" /><span class="mapId">上海</span></p>
+                        </div>
+                    </div>
+                    <div class="col-md-8 headerRight">
+                        <div class="headerline">
+                            <div class="loginBox">
+                                <ul class="nav loginBox">
+                                    <li><a href="#" sec:authentication="name" /><span>|</span></li>
+                                    <li><a href="#" target="_self">您的消息</a><span>|</span></li>
+                                    <li><a href="#" target="_self">关于我们</a><span>|</span></li>
+                                    <li><a href="#" target="_self">律师入口</a></li>
+                                    <li><a href="/signOut" sec:authorize="isAuthenticated()">登出</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="headerline">
+                            <div class="loginBox">
+                                <nav class="navbar-default" role="navigation">
+                                    <ul class="nav mainNav" >
+                                        <li class="active"><a th:href="@{/}">首页</a></li>
+                                        <li class="dropdown">
+                                            <a href="counseling_free.html" class="dropdown-toggle" data-toggle="dropdown">
+                                                法律咨询</a>
+                                            <ul class="dropdown-menu">
+                                                <li>
+                                                    <a th:href="@{/public/case/consulting/free}">免费法律咨询</a>
+                                                </li>
+                                                <li class="divider"></li>
+                                                <li>
+                                                    <a th:href="@{/public/case/lawsuit/self_service}">自助打官司</a>
+                                                </li>
+                                            </ul>
+                                        </li>
+                                        <li class="dropdown">
+                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">打官司</a>
+                                            <ul class="dropdown-menu">
+                                                <li>
+                                                    <a th:href="@{/public/case/lawsuit/lawyer}">找律师打官司</a>
+                                                </li>
+                                                <li class="divider"></li>
+                                                <li>
+                                                    <a th:href="@{/public/case/lawsuit/self_service}">自助打官司</a>
+                                                </li>
+                                            </ul>
+                                        </li>
+                                        <li><a href="#">其他法律业务</a></li>
+                                        <li class="lastItem"><a href="#">投诉</a></li>
+                                    </ul>
+                                </nav>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 	</div>
 </body>
 </html>
