--- a/fxs-platform-web/src/main/resources/templates/index.html
+++ b/fxs-platform-web/src/main/resources/templates/index.html
@@ -7,26 +7,18 @@
 	<div class="img-responsive">
 		<div th:replace="fragments/public_header :: public-header" ></div>
 		<div class="container">
-			<section class="container-fluid cover">
-				<div class="container tab-content">
-					<div class="mainBannerTitle">
-						<h1>
-							<span class="cur">案例</span> <a href="#">大数据分析</a>
-						</h1>
-					</div>
-					<div class="row searchBox">
-						<div class="col-xs-12 col-md-10">
-							<input value="" placeholder="搜索案例..." class="form-control square-select margin-top-2" />
-						</div>
-						<div class="col-xs-12 col-md-2">
-							<button type="submit" class="btn btn-default">开始搜索</button>
-						</div>
+			<div class="container tab-content homeInner">
+				<div class="mainBannerTitle">
+					<h1><span class="cur">案例</span> <a href="#" >大数据分析</a></h1>
+				</div>
+				<div class="row searchBox">
+					<div class="col-xs-12 col-md-9">
+						<input value="" placeholder="搜索案例..." class="form-control square-select margin-top-2"></input>
+						<button type="submit" class="btn btn-default searchNow">开始搜索</button>
 					</div>
 				</div>
-			</section>
-			<div class="empty">
-				<br />
 			</div>
+			<div class="empty"><br/></div>
 		</div>
 	</div>
 	<div th:replace="fragments/public_footer :: public-footer" ></div>
